--- a/app/index.html
+++ b/app/index.html
@@ -71,14 +71,14 @@
                                     <span class=" fa fa-angle-down"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-usermenu pull-right">
-                                    <li><a href="javascript:;"> Profile</a></li>
-                                    <li>
-                                        <a href="javascript:;">
-                                            <span>Settings</span>
-                                        </a>
-                                    </li>
-                                    <li><a href="javascript:;">Help</a></li>
-                                    <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                                    <!-- <li><a href="javascript:;"> Profile</a></li> -->
+                                    <!-- <li> -->
+                                        <!-- <a href="javascript:;"> -->
+                                            <!-- <span>Settings</span> -->
+                                        <!-- </a> -->
+                                    <!-- </li> -->
+                                    <!-- <li><a href="javascript:;">Help</a></li> -->
+                                    <li><a ng-click="logout()" class="cursor"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                                 </ul>
                             </li>
                             <li role="presentation" class="dropdown">
