--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,11 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="app.js"></script>
     <script src="main/controllers/main.ctrl.js"></script>
+    <style>
+        .cursor {
+            cursor: pointer;
+        }
+    </style>
 </head>
 <div ng-view ng-if="loggedIn != true"></div>
 
@@ -73,9 +78,9 @@
                                 <ul class="dropdown-menu dropdown-usermenu pull-right">
                                     <!-- <li><a href="javascript:;"> Profile</a></li> -->
                                     <!-- <li> -->
-                                        <!-- <a href="javascript:;"> -->
-                                            <!-- <span>Settings</span> -->
-                                        <!-- </a> -->
+                                    <!-- <a href="javascript:;"> -->
+                                    <!-- <span>Settings</span> -->
+                                    <!-- </a> -->
                                     <!-- </li> -->
                                     <!-- <li><a href="javascript:;">Help</a></li> -->
                                     <li><a ng-click="logout()" class="cursor"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
