them sua xoa vnu, va phan trang cho vnu

--- a/app/index.html
+++ b/app/index.html
@@ -23,9 +23,9 @@
     <script src="app.js"></script>
     <script src="main/controllers/main.ctrl.js"></script>
     <style>
-        .cursor {
-            cursor: pointer;
-        }
+    .cursor {
+        cursor: pointer;
+    }
     </style>
 </head>
 <div ng-view ng-if="loggedIn != true"></div>
@@ -174,6 +174,8 @@
     <script src="bower_components/gentelella/vendors/jQuery-Smart-Wizard/js/jquery.smartWizard.js"></script>
     <!-- Custom Theme Scripts -->
     <script src="bower_components/gentelella/build/js/custom.min.js"></script>
+    <!-- ui bootstrap -->
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 </body>
 
 </html>
