--- a/app/index.html
+++ b/app/index.html
@@ -76,13 +76,6 @@
                                     <span class=" fa fa-angle-down"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-usermenu pull-right">
-                                    <!-- <li><a href="javascript:;"> Profile</a></li> -->
-                                    <!-- <li> -->
-                                    <!-- <a href="javascript:;"> -->
-                                    <!-- <span>Settings</span> -->
-                                    <!-- </a> -->
-                                    <!-- </li> -->
-                                    <!-- <li><a href="javascript:;">Help</a></li> -->
                                     <li><a ng-click="logout()" class="cursor"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                                 </ul>
                             </li>
@@ -176,6 +169,9 @@
     <script src="bower_components/gentelella/build/js/custom.min.js"></script>
     <!-- ui bootstrap -->
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <!-- xlsx excel-->
+    <script src="bower_components/js-xlsx/dist/xlsx.full.min.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 </body>
 
 </html>
