nhap/xuat excel hop dong

--- a/app/index.html
+++ b/app/index.html
@@ -170,7 +170,9 @@
     <!-- ui bootstrap -->
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <!-- xlsx excel-->
-    <script src="bower_components/js-xlsx/dist/xlsx.full.min.js"></script>
+    <script src="bower_components/js-xlsx-style/dist/xlsx.full.min.js"></script>
+    <!-- file saver -->
+    <script src="bower_components/file-saver/FileSaver.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 </body>
 
