sua lai bo partnerInfo

--- a/app/index.html
+++ b/app/index.html
@@ -47,14 +47,15 @@
                         <div class="menu_section">
                             <h3>General</h3>
                             <ul class="nav side-menu">
-                                <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
+                                <!-- <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
-                                        <li><a href="/#/nation_continent"><i class="fa fa-globe"></i> Quốc Gia Và Châu lục </a></li>
-                                        <li><a href="/#/partner"><i class="fa fa-group"></i> Đối Tác </a></li>
-                                        <li><a href="/#/vnu"><i class="fa fa-university"></i> VNU </a></li>
-                                        <li><a href="/#/contract"><i class="fa fa-archive"></i> Hợp Đồng </a></li>
+                                        <li><a href="/#/activity"><i class="fa fa-university"></i> Hoạt động </a></li>
                                     </ul>
-                                </li>
+                                </li> -->
+                                <li><a href="/#/nation_continent"><i class="fa fa-globe"></i> Quốc Gia Và Châu lục </a></li>
+                                <li><a href="/#/partner"><i class="fa fa-group"></i> Đối Tác </a></li>
+                                <li><a href="/#/vnu"><i class="fa fa-university"></i> VNU </a></li>
+                                <li><a href="/#/contract"><i class="fa fa-archive"></i> Hợp Đồng </a></li>
                             </ul>
                         </div>
                     </div>
@@ -174,6 +175,8 @@
     <!-- file saver -->
     <script src="bower_components/file-saver/FileSaver.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <!-- angular md5 -->
+    <script src="bower_components/angular-md5/angular-md5.js"></script>
 </body>
 
 </html>
