--- a/app/index.html
+++ b/app/index.html
@@ -47,15 +47,16 @@
                         <div class="menu_section">
                             <h3>General</h3>
                             <ul class="nav side-menu">
-                                <!-- <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
+                                <!-- <li><a><i class="fa fa-gear"></i>  <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
                                         <li><a href="/#/activity"><i class="fa fa-university"></i> Hoạt động </a></li>
                                     </ul>
                                 </li> -->
-                                <li><a href="/#/nation_continent"><i class="fa fa-globe"></i> Quốc Gia Và Châu lục </a></li>
+                                <li><a href="/#/settings"><i class="fa fa-gear"></i> Thiết đặt </a></li>
+                                <!-- <li><a href="/#/nation_continent"><i class="fa fa-globe"></i> Quốc Gia Và Châu lục </a></li> -->
                                 <li><a href="/#/partner"><i class="fa fa-group"></i> Đối Tác </a></li>
-                                <li><a href="/#/vnu"><i class="fa fa-university"></i> VNU </a></li>
-                                <li><a href="/#/contract"><i class="fa fa-archive"></i> Hợp Đồng </a></li>
+                                <!-- <li><a href="/#/vnu"><i class="fa fa-university"></i> VNU </a></li> -->
+                                <!-- <li><a href="/#/contract"><i class="fa fa-archive"></i> Hợp Đồng </a></li> -->
                             </ul>
                         </div>
                     </div>
