sua lai ko hien modal khi ma reload tu trang partner roi sang trang nation_continent, cho chung vnu va continent vao thu muc setting

--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
                         <div class="menu_section">
                             <h3>General</h3>
                             <ul class="nav side-menu">
-                                <li><a href="/#/settings"><i class="fa fa-gear"></i> Thiết đặt </a></li>
+                                <li><a href="/#/settings/nation_continent"><i class="fa fa-gear"></i> Thiết đặt </a></li>
                                 <li><a><!-- <i class="fa fa-gear"></i> --> Đối tác <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
                                         <li ng-class="{active : currentUrl == '/contract'}"><a href="/#/partner/contract"><i class="fa fa-archive"></i> Hợp Đồng </a></li>
