--- a/app/index.html
+++ b/app/index.html
@@ -48,11 +48,11 @@
                             <h3>General</h3>
                             <ul class="nav side-menu">
                                 <li><a href="/#/settings/nation_continent"><i class="fa fa-gear"></i> Thiết đặt </a></li>
-                                <li><a><!-- <i class="fa fa-gear"></i> --> Đối tác <span class="fa fa-chevron-down"></span></a>
-                                    <ul class="nav child_menu">
-                                        <li ng-class="{active : currentUrl == '/contract'}"><a href="/#/partner/contract"><i class="fa fa-archive"></i> Hợp Đồng </a></li>
-                                        <li ng-class="{active : currentUrl == '/activity'}"><a href="/#/partner/activity"><i class="fa fa-university"></i> Hoạt động </a></li>
-                                        <li ng-class="{active : currentUrl == '/information'}"><a href="/#/partner/information"><i class="fa fa-group"></i> Danh sách đối Tác </a></li>
+                                <li class="active"><a><!-- <i class="fa fa-gear"></i> --> Đối tác <span class="fa fa-chevron-down"></span></a>
+                                    <ul class="nav child_menu" style="display: block;">
+                                        <li ng-class="{active : currentUrl == '/contract'}" ng-click="currentUrl = '/contract'"><a href="/#/partner/contract"><i class="fa fa-archive"></i> Hợp Đồng </a></li>
+                                        <li ng-class="{active : currentUrl == '/activity'}" ng-click="currentUrl = '/activity'"><a href="/#/partner/activity"><i class="fa fa-university"></i> Hoạt động </a></li>
+                                        <li ng-class="{active : currentUrl == '/information'}" ng-click="currentUrl = '/information'"><a href="/#/partner/information"><i class="fa fa-group"></i> Danh sách đối Tác </a></li>
                                         <!-- <li>{{currentUrl}}</li> -->
                                     </ul>
                                 </li>
