them file pdf kem theo hop dong, nhg maf chua code add file, up tam len de sua lai dia chi server

--- a/app/index.html
+++ b/app/index.html
@@ -17,9 +17,9 @@
     <!-- Custom Theme Style -->
     <link href="bower_components/gentelella/build/css/custom.min.css" rel="stylesheet">
     <!-- AngularJs -->
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/angular-route/angular-route.min.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="app.js"></script>
     <script src="main/controllers/main.ctrl.js"></script>
     <style>
@@ -177,10 +177,10 @@
     <!-- xlsx excel-->
     <script src="bower_components/js-xlsx-style/dist/xlsx.full.min.js"></script>
     <!-- file saver -->
-    <script src="bower_components/file-saver/FileSaver.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="bower_components/file-saver/FileSaver.min.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <!-- angular md5 -->
-    <script src="bower_components/angular-md5/angular-md5.js"></script>
+    <script src="bower_components/angular-md5/angular-md5.min.js"></script>
 </body>
 
 </html>
