--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
 </head>
 <div ng-view ng-if="loggedIn != true"></div>
 
-<body class="nav-md" ng-app="myAdminApp" ng-controller="mainCtrl" ng-cloak>
+<body class="nav-sm" ng-app="myAdminApp" ng-controller="mainCtrl" ng-cloak>
     <div class="container body" ng-show="loggedIn">
         <div class="main_container">
             <div class="col-md-3 left_col">
@@ -46,17 +46,17 @@
                     <!-- sidebar menu -->
                     <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
                         <div class="menu_section">
-                            <h3>General</h3>
+                            <!-- <h3>General</h3> -->
                             <ul class="nav side-menu">
                                 <li><a href="/#/settings/nation_continent"><i class="fa fa-gear"></i> Thiết đặt </a></li>
-                                <li class="active"><a><!-- <i class="fa fa-gear"></i> --> Đối tác <span class="fa fa-chevron-down"></span></a>
-                                    <ul class="nav child_menu" style="display: block;">
-                                        <li ng-class="{active : currentUrl == '/contract'}" ng-click="currentUrl = '/contract'"><a href="/#/partner/contract"><i class="fa fa-archive"></i> Hợp Đồng </a></li>
+                                <li ng-class="{active : currentUrl == '/contract'}" ng-click="currentUrl = '/contract'"><a href="/#/partner/contract"><i class="fa fa-archive"></i> Hợp Đồng </a></li>
                                         <li ng-class="{active : currentUrl == '/activity'}" ng-click="currentUrl = '/activity'"><a href="/#/partner/activity"><i class="fa fa-university"></i> Hoạt động </a></li>
+                                <!-- <li class="active"><a> Đối tác <span class="fa fa-chevron-down"></span></a>
+                                    <ul class="nav child_menu" style="display: block;">
+                                        
                                         <li ng-class="{active : currentUrl == '/information'}" ng-click="currentUrl = '/information'"><a href="/#/partner/information"><i class="fa fa-group"></i> Danh sách đối Tác </a></li>
-                                        <!-- <li>{{currentUrl}}</li> -->
                                     </ul>
-                                </li>
+                                </li> -->
                                 <!-- <li><a href="/#/nation_continent"><i class="fa fa-globe"></i> Quốc Gia Và Châu lục </a></li> -->
                                 
                                 <!-- <li><a href="/#/vnu"><i class="fa fa-university"></i> VNU </a></li> -->
