--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
     <link href="bower_components/gentelella/vendors/nprogress/nprogress.css" rel="stylesheet">
     <!-- Custom Theme Style -->
     <link href="bower_components/gentelella/build/css/custom.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="bower_components/tags-input/tags-input.css">
     <!-- AngularJs -->
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
@@ -191,6 +192,8 @@
     <script src="bower_components/angular-md5/angular-md5.min.js"></script>
     <!-- angucomplete -->
     <script src="bower_components/angucomplete-alt/dist/angucomplete-alt.min.js"></script>
+    <!-- tags-input -->
+    <script src="bower_components/tags-input/tags-input.js"></script>
 </body>
 
 </html>
