--- a/app/index.html
+++ b/app/index.html
@@ -58,8 +58,8 @@
                             <!-- <h3>General</h3> -->
                             <ul class="nav side-menu">
                                 <li><a href="/#/settings/nation_continent"><i class="fa fa-gear"></i> Thiết đặt </a></li>
-                                <li ng-class="{active : currentUrl == '/contract'}" ng-click="currentUrl = '/contract'"><a href="/#/partner/contract"><i class="fa fa-archive"></i> Hợp Đồng </a></li>
-                                <li ng-class="{active : currentUrl == '/activity'}" ng-click="currentUrl = '/activity'"><a href="/#/partner/activity"><i class="fa fa-university"></i> Hoạt động </a></li>
+                                <li ng-class="{active : currentUrl == '/contract'}" ng-click="currentUrl = '/contract'"><a href="/#/partner/contract"><i class="fa fa-archive"></i> Thỏa thuận hợp tác </a></li>
+                                <li ng-class="{active : currentUrl == '/activity'}" ng-click="currentUrl = '/activity'"><a href="/#/partner/activity"><i class="fa fa-university"></i> Hoạt động hợp tác cụ thể </a></li>
                                 <!-- <li class="active"><a> Đối tác <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu" style="display: block;">
                                         
