--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     <!-- Bootstrap -->
     <script src="bower_components/gentelella/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- AngularJs -->
-    <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="app.js"></script>
@@ -50,9 +50,9 @@
     }
     </style>
 </head>
-<div ng-view ng-if="loggedIn != true"></div>
+<!-- <div ng-view ng-if="loggedIn != true"></div> -->
 
-<body class="nav-md" ng-app="myAdminApp" ng-controller="mainCtrl" ng-cloak>
+<body class="nav-md" ng-controller="mainCtrl" ng-cloak>
     <div class="container body" ng-show="loggedIn">
         <div class="main_container">
             <div class="col-md-3 left_col">
@@ -106,7 +106,7 @@
                                     <li><a ng-click="logout()" class="cursor"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                                 </ul>
                             </li>
-                            <!-- <li role="presentation" class="dropdown">
+                            <li role="presentation" class="dropdown">
                                 <a href="javascript:;" class="dropdown-toggle info-number" data-toggle="dropdown" aria-expanded="false">
                                     <i class="fa fa-envelope-o"></i>
                                     <span class="badge bg-green">6</span>
@@ -143,7 +143,7 @@
                                         </div>
                                     </li>
                                 </ul>
-                            </li> -->
+                            </li>
                         </ul>
                     </nav>
                 </div>
@@ -166,7 +166,7 @@
         </div>
     </div>
     <!-- user -->
-    <script src="main/controllers/user.ctrl.js"></script>
+    <!-- <script src="main/controllers/user.ctrl.js"></script> -->
     <script src="main/services/user.service.js"></script>
     <!-- nation and continent -->
     <script src="main/controllers/nation.ctrl.js"></script>
