--- a/app/index.html
+++ b/app/index.html
@@ -127,7 +127,7 @@
                                             </span>
                                             <span class="pull-right" ng-if="noti.contract != undefined">
                                                 <br>
-                                                <button type="button" class="btn-default" data-dismiss="modal">Bỏ qua</button>
+                                                <button type="button" class="btn-default" data-dismiss="modal" ng-click="confirmDelete(noti.contract.id, noti.contract.partner.partnerName)" data-toggle="modal" data-target="#remove_renew">Hủy tự động renew</button>
                                                 <button ng-controller="vnuCtrl" type="button" class="btn-primary" ng-click="setRenewContract(noti.contract)" data-toggle="modal" data-target="#renew_contract">Renew</button>
                                             </span>
                                         </a>
@@ -142,7 +142,7 @@
             <!-- page content -->
             <div class="right_col" role="main">
                 <div class="">
-                    <div ui-view=></div>
+                    <div ui-view></div>
                 </div>
             </div>
             <!-- /page content -->
