--- a/app/index.html
+++ b/app/index.html
@@ -166,24 +166,24 @@
                             <form class="form-horizontal form-label-left">
                                 <div class="form-group">
                                     <label class="control-label col-md-3 col-sm-3 col-xs-12">Mật khẩu hiện tại:</label>
-                                    <div class="col-md-6 col-sm-6 col-xs-12">
+                                    <div class="col-md-9 col-sm-9 col-xs-12">
                                         <input type="password" name="country" class="form-control col-md-10" ng-model="password.oldPassword" required />
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="control-label col-md-3 col-sm-3 col-xs-12">Mật khẩu:</label>
-                                    <div class="col-md-6 col-sm-6 col-xs-12">
+                                    <div class="col-md-9 col-sm-9 col-xs-12">
                                         <input type="password" name="country" class="form-control col-md-10" ng-model="password.newPassword" required />
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="control-label col-md-3 col-sm-3 col-xs-12">Nhập lại mật khẩu:</label>
-                                    <div class="col-md-6 col-sm-6 col-xs-12">
+                                    <div class="col-md-9 col-sm-9 col-xs-12">
                                         <input type="password" name="country" class="form-control col-md-10" ng-model="password.reTypePass" required />
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <div class="alert alert-warning col-md-6 col-sm-6 col-xs-12 col-md-offset-3" ng-if="password.newPassword != input.reTypePass && input.reTypePass != null">
+                                    <div class="alert alert-warning col-md-6 col-sm-6 col-xs-12 col-md-offset-3" ng-if="password.newPassword != password.reTypePass && password.reTypePass != null">
                                         <strong>Mật khẩu mới không khớp</strong>
                                     </div>
                                 </div>
