--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="app.js"></script>
     <script src="main/controllers/main.ctrl.js"></script>
+    <!-- <script src="main/uglify/contract.js"></script> -->
     <style>
     .cursor {
         cursor: pointer;
@@ -212,7 +213,6 @@
         </div>
     </div>
     <!-- user -->
-    <!-- <script src="main/controllers/user.ctrl.js"></script> -->
     <script src="main/services/user.service.js"></script>
     <!-- nation and continent -->
     <script src="main/controllers/nation.ctrl.js"></script>
