--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
                         <div class="menu_section">
                             <!-- <h3>{{userName}}</h3> -->
                             <ul class="nav side-menu">
-                                <li><a href="/#/settings/nation_continent"><i class="fa fa-gear"></i> Thiết đặt </a></li>
+                                <li><a href="/#/settings/nation_continent"><i class="fa fa-gear"></i> Thiết lập </a></li>
                                 <li ng-class="{active : currentUrl == '/contract'}" ng-click="currentUrl = '/contract'"><a href="/#/partner/contract"><i class="fa fa-archive"></i> Thỏa thuận hợp tác </a></li>
                                 <li ng-class="{active : currentUrl == '/activity'}" ng-click="currentUrl = '/activity'">
                                     <!-- <a href="/#/partner/activity"><i class="fa fa-university"></i> Hoạt động hợp tác cụ thể </a></li> -->
